[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "intake-system"
version = "0.1.0"
description = "Readwise-first intake, triage, review, and Markdown routing system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "typer>=0.12",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[project.scripts]
intake = "intake_system.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/intake_system"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
